# savanna

./: .gitignore  README.md
conf/: agent  conf  conf.template  coordinator
ec2/: launch.conf.template  launch.py  launch.sh
frontend/: cacheclient.py  dispatcher.py  gc.py  heartbeat.py  io_man.py  reset.sh  sort_example.py  worker.py  worker_main.py
scripts/: cuda.sh  install_lib.sh  install_tf.sh  sync.sh
src/: .gitignore  CMakeLists.txt  cacheserver.cc  cacheserver.h  epollmasterworker.cc  epollmasterworker.h  epollobjserver.cc  epollobjserver.h  epollworker.cc  epollworker.h  log.cc  log.h  main.cc  master.cc  master.h  masterregistry.cc  masterregistry.h  masterworker.cc  masterworker.h  objclient.cc  objclient.h  objserver.cc  objserver.h  objservermain.cc  objworker.cc  objworker.h  readerwriterlock.cc  readerwriterlock.h  start.sh  stop.sh  threadpool.cc  threadpool.h
